2014-10-16 John Wu <John dot Wu at ACM dot org>
	* src/util.h, src/dictionary.h: move the specialization of
	std::hash from util.h to dictionary.h

2014-10-13 John Wu <John dot Wu at ACM dot org>
	* configure.ac: extend the checking of std::unordered_map to avoid
	problem of unset variable
	* src/dictionary.h: add option to use __gnu_cxx::hash_map instead
	of std::unordered_map to accommodate order compilers

2014-10-05 John Wu <John dot Wu at ACM dot org>
	* src/selectClause.cpp:534 nexted to output numbers in hex format
	(which creates inconsistent internal names for referring to
	expressions without aliases)

2014-10-02 John Wu <John dot Wu at ACM dot org>
	* src/iapi.cpp:1742 remove bound == 0 (an error discovered by
	Junmin Gu)

2014-09-20 John Wu <John dot Wu at ACM dot org>
	* src/index.cpp: when activate a set of bitvectors between i and
	j, the offsets for buf was computed incorrectly, which leads to
	wrong bitvectors being reconstructed

2014-09-17 John Wu <John dot Wu at ACM dot org>
	* src/index.h: add a new variant of index::bitmapReader::read that
	takes array_t<uint32_t>
	* src/bitvector.h: add new constructor of bitvector that uses a
	part of an array_t object
	* src/index.cpp: use array_t<uint32_t> with index::bitmapReader so
	that temporary storage could be reference counted, to address the
	problem reported by Jerome Soumagne

2014-09-11 John Wu <John dot Wu at ACM dot org>
	* src/column.cpp: in function attachIndex, set the mask to all 1s
	if the existing mask is empty
	* src/bord.cpp: in constructor of bord from a list of columns, ask
	each column for the number of rows
	* src/bord.h: add function ibis::bord::column::getDataflag and
	ibis::bord::column::setDataflag

2014-09-10 John Wu <John dot Wu at ACM dot org>
	* src/bord.cpp: in constructor of bord, check the validify of
	pointer buf before using (to address a problem reported by Jerome
	Soumagne

2014-09-03 John Wu <John dot Wu at ACM dot org>